# ive

./: .gitignore  CMakeLists.txt  README.md  clang-format.sh
cmake/: bmtap2.cmake  downanddecompress.cmake  ive.cmake  middleware.cmake  mlir.cmake  soc.cmake  tracer.cmake
example/: CMakeLists.txt  example_bk_subtract.cpp
gst-plugin/: CMakeLists.txt  README.md
gst-plugin/background/: CMakeLists.txt  build.sh  gstcviivebackground.c  gstcviivebackground.h
include/: bmkernel_non_atomic.h  core.hpp  cvi_comm_ive.h  cvi_ive.h  debug.hpp  ive.h  ive_draw.h  ive_experimental.h  ive_tracer.h  kernel_generator.hpp  neon_utils.hpp  table_manager.hpp  tpu_data.hpp  utils.hpp
include/ive_180x/: cvi_comm_ive.h
include/tpu/: tpu_add.hpp  tpu_alpha_blend_pixel.hpp  tpu_and.hpp  tpu_block.hpp  tpu_cmp.hpp  tpu_copy.hpp  tpu_fill.hpp  tpu_filter.hpp  tpu_magandang.hpp  tpu_morph.hpp  tpu_mulsum.hpp  tpu_normalize.hpp  tpu_or.hpp  tpu_sad.hpp  tpu_sigmoid.hpp  tpu_sobel.hpp  tpu_sub.hpp  tpu_table.hpp  tpu_threshold.hpp  tpu_xor.hpp
include/tracer/: tracer.h
modules/: CMakeLists.txt  modules_core.cpp
modules/motion_detection/: CMakeLists.txt  md.cpp  md.hpp
sample/: CMakeLists.txt  sample_16bitTo8bit.c  sample_add.c  sample_alpha_blend.c  sample_alpha_blend_pixel.c  sample_alpha_blend_pixel_yuv420.c  sample_alpha_blend_pixel_yuv420_roi.c  sample_alpha_blend_y.c  sample_and.c  sample_block.c  sample_convert_scale_abs.c  sample_copy.c  sample_copy_yuv420p.c  sample_dilate.c  sample_downsample.c  sample_filter.c  sample_histEq.c  sample_histogram.c  sample_hog.c  sample_integral_image.c  sample_island.c  sample_lbp.c  sample_magandang.c  sample_manual.c  sample_map.c  sample_mask.c  sample_md.cpp  sample_morph.c  sample_ncc.c  sample_normgrad.c  sample_or.c  sample_ordstat.c  sample_sad.c  sample_sub.c  sample_thresh.c  sample_thresh16.c  sample_threshold.c  sample_xor.c
scripts/: batch_image_resize.sh  codecheck.sh  sdk_release.sh  test_funcs.sh  test_samples.sh
src/: CMakeLists.txt  core.cpp  ive.cpp  ive_draw.cpp  ive_internal.hpp  ive_log.hpp  ive_tracer.cpp  kernel_generator.cpp  table_manager.cpp  tpu_data.cpp  tpu_ive.cpp  version.hpp.in
src/2ddraw/: tpu_draw_rect.cpp
src/tpu/: tpu_add.cpp  tpu_add_bf16.cpp  tpu_alpha_blend_pixel.cpp  tpu_and.cpp  tpu_block.cpp  tpu_block_bf16.cpp  tpu_const_fill.cpp  tpu_copy_direct.cpp  tpu_copy_interval.cpp  tpu_downsample.cpp  tpu_filter.cpp  tpu_magandang.cpp  tpu_mask.cpp  tpu_max.cpp  tpu_min.cpp  tpu_morph.cpp  tpu_mulsum.cpp  tpu_normalize.cpp  tpu_or.cpp  tpu_sad.cpp  tpu_sigmoid.cpp  tpu_sobel.cpp  tpu_sobel_gradonly.cpp  tpu_sub.cpp  tpu_sub_abs.cpp  tpu_table.cpp  tpu_threshold.cpp  tpu_threshold_high_low.cpp  tpu_threshold_slope.cpp  tpu_xor.cpp
test/: CMakeLists.txt  test_16bitTo8bit_c.c  test_add.cpp  test_add_c.c  test_and.cpp  test_and_c.c  test_blend_s8_c.c  test_blend_u8_ab_c.c  test_blend_y.c  test_block.cpp  test_block_c.c  test_cmp_c.c  test_copy2_c.c  test_copy_c.c  test_csc_c.c  test_cviimg_c.c  test_filter.cpp  test_filter_c.c  test_filter_csc_c.c  test_histEq_c.c  test_histogram_c.c  test_hog_batch_c.c  test_hog_c.c  test_integral_image_c.c  test_island_c.c  test_lbp_c.c  test_morph.cpp  test_morph_c.c  test_mulsum_c.c  test_ncc_c.c  test_norm_grad_c.c  test_or.cpp  test_or_c.c  test_read_c.c  test_resize_c.c  test_s8_cmp_c.c  test_sad_c.c  test_sad_stereo_c.c  test_sigmoid_c.c  test_sobel.cpp  (+11 more)
toolchain/: toolchain-riscv64-musl.cmake
tpu_math/: 1880v2_utils.h  CMakeLists.txt  sqrt.cpp  sqrt.hpp
