project(test)
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
    ${OpenCV_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/../prebuilt/middleware/include
)

# Basic op
add_executable(test_add test_add.cpp)
target_link_libraries(test_add cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_add DESTINATION bin)
add_executable(test_and test_and.cpp)
target_link_libraries(test_and cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_and DESTINATION bin)
add_executable(test_or test_or.cpp)
target_link_libraries(test_or cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_or DESTINATION bin)
add_executable(test_sub test_sub.cpp)
target_link_libraries(test_sub cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_sub DESTINATION bin)
add_executable(test_xor test_xor.cpp)
target_link_libraries(test_xor cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_xor DESTINATION bin)

add_executable(test_filter test_filter.cpp)
target_link_libraries(test_filter cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_filter DESTINATION bin)
add_executable(test_morph test_morph.cpp)
target_link_libraries(test_morph cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_morph DESTINATION bin)
add_executable(test_threshold test_threshold.cpp)
target_link_libraries(test_threshold cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_threshold DESTINATION bin)
add_executable(test_sobel test_sobel.cpp)
target_link_libraries(test_sobel cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_sobel DESTINATION bin)


project(test-c)
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
)

add_executable(test_add_c test_add_c.c)
target_link_libraries(test_add_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_add_c DESTINATION bin)
add_executable(test_and_c test_and_c.c)
target_link_libraries(test_and_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_and_c DESTINATION bin)
add_executable(test_copy_c test_copy_c.c)
target_link_libraries(test_copy_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_copy_c DESTINATION bin)
add_executable(test_morph_c test_morph_c.c)
target_link_libraries(test_morph_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_morph_c DESTINATION bin)
add_executable(test_filter_c test_filter_c.c)
target_link_libraries(test_filter_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_filter_c DESTINATION bin)
add_executable(test_or_c test_or_c.c)
target_link_libraries(test_or_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_or_c DESTINATION bin)
add_executable(test_sobel_grad_c test_sobel_grad_c.c)
target_link_libraries(test_sobel_grad_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_sobel_grad_c DESTINATION bin)
add_executable(test_sub_c test_sub_c.c)
target_link_libraries(test_sub_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_sub_c DESTINATION bin)
add_executable(test_threshold_c test_threshold_c.c)
target_link_libraries(test_threshold_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_threshold_c DESTINATION bin)
add_executable(test_xor_c test_xor_c.c)
target_link_libraries(test_xor_c cvi_ive_tpu glog ${OpenCV_LIBS})
install(TARGETS test_xor_c DESTINATION bin)