function(build_test FNAME)
  add_executable(${FNAME} ${FNAME}.c)
  if("${BM_TARGET}" STREQUAL "soc")
    set(SOC_LIB ${PROTO_LIBRARIES} ${CLABS_LIBRARIES})
  else()
    set(SOC_LIB "")
  endif()
  target_link_libraries(${FNAME} ${SOC_LIB} cvi_ive_tpu ${GLOG_LIBRARIES} ${OpenCV_LIBS} -lm)
  install(TARGETS ${FNAME} DESTINATION bin)
endfunction()

project(test-c)
include_directories(
    ${CMAKE_SOURCE_DIR}/3rdparty
    ${CMAKE_SOURCE_DIR}/include
)

build_test(test_add_c)
build_test(test_and_c)
build_test(test_block_c)
build_test(test_copy_c)
build_test(test_hog_c)
build_test(test_morph_c)
build_test(test_norm_grad_c)
build_test(test_filter_c)
build_test(test_or_c)
build_test(test_sad_c)
build_test(test_sad_stereo_c)
build_test(test_sigmoid_c)
build_test(test_sobel_grad_c)
build_test(test_sub_c)
build_test(test_threshold_c)
build_test(test_thresholds16_c)
build_test(test_thresholdu16_c)
build_test(test_xor_c)